--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom scripts-->
-    <script src="Javascript/Scroll.js"></script>
-    <script src="Javascript/BurgerMenu.js"></script>
+    <script src="Scroll.js" type="text/javascript"></script>
+    <script src="BurgerMenu.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="css/scrollStyle.css">
 
