--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
-    <script src="Javascript/Scroll.js"></script>
-    <script src="Javascript/BurgerMenu.js"></script>
+    <script src='js/Scroll.js' type="text/javascript"></script>
+    <script src='js/BurgerMenu.js' type="text/javascript"></script>
     <title>Projects</title>
     <link rel="stylesheet" href="css/scrollStyle.css">
   </head>
