Added VR Puzzle Game to Games Section

--- a/Games.html
+++ b/Games.html
@@ -84,7 +84,16 @@
                         </figure>
                         <hr>
                     </div>
-                    
+                    <div>
+                        <h2 class="text-center">
+                            Untitled VR Hand Removing Puzzle Game <span class="badge badge-pill badge-warning">In Development</span>
+                            <span class="badge badge-pill badge-primary">Unity</span>
+                            <span class="badge badge-pill badge-dark">VR</span>
+                        </h2>
+                        <p>A VR puzzle game in which you can detach your hands to solve puzzles. 
+                            Currently still in development the game is inspired by similar VR games such as Polyarc’s puzzle-platform Moss as well as non-VR games with Brothers: A Tale of Two Sons being a major source of inspiration.
+                        </p>
+                        <video controls loop autoplay class="img-fluid"><source src="videos/VRVideo1.mp4" type="video/mp4"></video>
                     <div>
                         <h2 class="text-center">
                             G-Penguin <span class="badge badge-pill badge-success">Complete</span>
