--- a/index.html
+++ b/index.html
@@ -53,16 +53,18 @@
     <div class="mx-auto container lead">
         <hr>
         <p id ="intro">Hi, I'm Ryan</p>
-        <p>I am a Game Developer from Hobart, Tasmania and a very soon to be graduate of The University of Tasmania.</p>
-        <p>For the past four years i’ve been studying a combined degree of ICT (Computer Science) and Science majoring in Games and Creative Technologies and Geography and Environmental studies respectively.</p>
+        <p>I am a Game Developer from Hobart Tasmania.</p>
+        <p>For the past 10 months I’ve been working as a Generalist Unity developer and Technical Artist at Adam Walker Film, where I’ve been involved in a wide variety of projects targeting VR, Desktop and Mobile experiences.</p>
+        <p>My time at Adam Walker Film has come to an end and I am now looking for a new challenge in the game development space and to further and improve my skills as a developer.</p>
+        <p>I am a graduate of the University of Tasmania, where I studied a Combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies.</p>
         <p>I have a wide range of interests from programming, game design, web and software development, UI and UX design as well as in less development related fields such as geography and conservation.
         </p>
-        <p>I am passionate about games and games development is ideally where I want to work in my professional career. My first memories of playing games comes from playing games such as Myst, Colin McRae Rally, Harry potter games, and Roller-coaster Tycoon from the late 90s early 2000s with my brother and sister.</p>
-        <p> I love playing a wide variety of games and am always looking for new experiences in games to inspire my own development or change the way I think about games as a medium.
+        <p>I am passionate about games and game development, with my first memories of playing games coming from playing games such as Myst, Colin McRae Rally, Harry potter games, and Roller-coaster Tycoon from the late 90s early 2000s with my brother and sister.</p>
+        <p>I love playing a wide variety of games and am always looking for new experiences in games to inspire my own development or change the way I think about games as a medium.
         </p>
         
         <h1>My Skills</h1>
-        <p>Through my studies and personal projects, I have gained experience using a multitude of different programming languages and tools.</p>
+        <p>Through my work, studies, and personal projects, I have gained experience using a multitude of different programming languages and tools.</p>
         <h4>Technical</h4>
         <ul>
             <li>C#
@@ -87,7 +89,11 @@
             <li>Unity VR Development</li>
             <li>Godot 2D C# development.
             </li>
+            <li>HLSL shader programming.</li>
             <li>3D modelling, UV unwrapping, Animation in 3ds Max.
+            </li>
+            <li>
+            Substance painter PBR metal/roughness workflows.
             </li>
         </ul>
         <h4>Web Development</h4>
