Updated Games section

--- a/Games.html
+++ b/Games.html
@@ -55,6 +55,36 @@
                 <div>
                     <div>
                         <h2 class="text-center">
+                            Galactic Odyssey by Adam Walker Studio  
+                            <span class="badge badge-pill badge-success">Complete</span> <span class="badge badge-pill badge-primary">Unity</span>
+                        </h2>
+                        <p>
+                        A hyper-casual, endless skill-based game released on both the Apple App Store and Google Play Store. My roles on the project included creation of the shaders and effects, and all gameplay and interface implementation. 
+                        </p>
+                        <h4>Examples of my contribution</h4>
+                        <h5>Gameplay Implementation</h5>
+                        <video width="320" height="240" muted controls loop autoplay class="img-fluid"><source src="videos/galacticodyssey.mp4" type="video/mp4"></video>
+                        <h5>Object Pooling</h5>
+                        <h5>Easy updating of Game Text Google sheets + JSON</h5>
+                        <h5>Parallax Star System</h5>
+                        <!-- Buttons for IOS and Android-->
+                        <button class="btn btn-outline-dark btn-icon-text" onclick="document.location='https://apps.apple.com/us/app/galactic-odyssey/id1612378225'">
+                            <i class="fa fa-apple btn-icon-prepend mdi-36px"></i>
+                            <span class="d-inline-block text-left">
+                              <small class="font-weight-light d-block">Available on the</small>
+                              App Store
+                            </span>
+                          </button>
+                          <button class="btn btn-outline-dark btn-icon-text" onclick="document.location='https://play.google.com/store/apps/details?id=com.adamwalkerstudio.GalacticOdyssey&hl=en&gl=US'">
+                            <i class="fa fa-android btn-icon-prepend mdi-36px"></i>
+                            <span class="d-inline-block text-left">
+                              <small class="font-weight-light d-block">Get it on the</small>
+                              Google Play
+                            </span>
+                          </button>
+                    </div>
+                    <div>
+                        <h2 class="text-center">
                             Temporal Scavenger  
                             <span class="badge badge-pill badge-primary">Unity</span>
                         </h2>
