Added in AWF images

--- a/Games.html
+++ b/Games.html
@@ -63,12 +63,12 @@
                         </p>
                         <h4>Examples of my contribution</h4>
                         <h5>Gameplay Implementation</h5>
-                        <p>Throughout development the core gameplay elements were added to and iterated on to attempt to create the most satisfying experience for the player.  </p>
+                        <p>Throughout development the core gameplay elements were iterated and expanded on to attempt to create the most satisfying experience for the player.  </p>
                         <center>
                             <video width="320" height="240" muted controls loop autoplay class="img-fluid"><source src="videos/galacticodyssey.mp4" type="video/mp4"></video>
                         </center>
                         <h5>Object Pooling</h5>
-                        <p>To ease performance, I implemented a generic object pooling system that could then be extended for different types of objects. This was vital in an endless style game where assets need to be reused so slowdown does not occur at high levels. </p>
+                        <p>To ease performance issues, I implemented a generic object pooling system that could then be extended for different types of objects. This was vital in an endless style game where assets need to be reused so slowdown does not occur at high levels. </p>
                         <h5>Easy updating of Game Text Google sheets + JSON</h5>
                         <p>To allow for easy updating and more text-based content in the game I implemented a workflow where designers could easily update the games text by importing Google sheets data as a JSON file. </p>
                         <h5>Parallax Star System</h5>
@@ -97,15 +97,16 @@
                             Parallax interior mapped Card Shader
                             <span class="badge badge-pill badge-primary">Unity</span>
                         </h3>
-                        <p>The goal of this shader was to produce a parallax card shader for a 3D card game to give the illusion of a mini scene within the card. The shader does not use cube maps rather uses one texture sheet with all layers and walls of the interior. The shader was created this way to allow for more nuanced control on the parallax depth of each interior layer and to allow effects such as horizontal and vertical overscan.</p>
-                        <img src="" class="img-fluid" alt="Parallax Card Shader Image">
+                        <p>The goal of this shader was to produce a parallax card shader for a 3D card game to give the illusion of a mini scene within the card. The shader does not use cube maps, rather using one texture sheet with all layers and walls of the interior, which are then mapped to the correct parallax level and distortion. The shader was created this way to allow for more nuanced control on the parallax depth of each interior layer and to allow effects such as horizontal and vertical overscan.</p>
+                        <img src="images/Card Interior Parallax Shader_B.png" class="img-fluid" alt="Parallax Card Shader">
+                        <br>
                         <h3>
                             VR Shipping Container Exhibition
                             <span class="badge badge-pill badge-primary">Unity</span>
                             <span class="badge badge-pill badge-dark">VR</span>
                         </h3>
                         <p>A client needed to visualise how a wall to ceiling video experience would look and sound like within a shipping container. My role involved the exact 1 to 1 creation of the shipping container and TV positions within Unity to allow the client to visualise the spatial arrangement of the exhibition using VR.  </p>
-                        <img src="" class="img-fluid" alt="VR Container Image">
+                        <img src="images/360 Container_B.png" class="img-fluid" alt="VR Container interior">
                         <h3>
                             Woolworths Tradeshow webapp PBR Setup and Processing
                             <span class="badge badge-pill badge-success">3DsMax</span>
@@ -115,13 +116,15 @@
                         </h3>
                         <p>I performed a number of roles in preparing and creating assets for use in the ThreeJs powered Woolworths Tradeshow Webapp. These included the following tasks </p>
                         <ul>
-                           <li>3D modelling of Woolworths items using 3DsMax.</li>
+                           <li>3D modelling of Woolworths products using 3DsMax.</li>
                            <li>UV unwrapping, texturing and optimising of models in 3DsMax.</li>
                            <li>Creation of normals, metallic-roughness and Ambient Occlusion combined maps using Substance Painter.</li>
                            <li>Optimising of PBR textures using photoshop and Color Quantizer to reduce asset file sizes.</li>
                            <li>Converting FBXs for models and animations to gltf format for use in the ThreeJs web application. </li>
                         </ul>
-                        <img src="" class="img-fluid" alt="Woolworth Tradeshow app PBR Image">
+                        <p>Examples of Woolworths characters assets I prepared and optimised for use in the Woolworths Tradeshow Webapp.</p>
+                        <img src="images/tradeshow PBR_A.png" class="img-fluid" alt="Woolworth Tradeshow app PBR Character">
+                        <img src="images/Lobster PBR Character.png" class="img-fluid" alt="Lobster Character PBR">
                     </div>
                     <br>
                     <div>
