--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
     <div class="mx-auto container lead">
         <hr>
         <p id ="intro">Hi, I'm Ryan</p>
-        <p>I am a Game Developer from Hobart Tasmania.</p>
-        <p>For the past 10 months I’ve been working as a Generalist Unity developer and Technical Artist at Adam Walker Film, where I’ve been involved in a wide variety of projects targeting VR, Desktop and Mobile experiences.</p>
-        <p>My time at Adam Walker Film has come to an end and I am now looking for a new challenge in the game development space and to further and improve my skills as a developer.</p>
-        <p>I am a graduate of the University of Tasmania, where I studied a Combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies.</p>
+        <p>I am a Game Developer originally from Hobart, now living in Brisbane.</p>
+        <p> I am a graduate of the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
+        <p>I current work at Next World Enterprises as an Associate Programmer. At Next World I’ve had the opportunity to work with, and learn from a team of extremely talented developers to help produce high quality virtual reality training experiences.</p>
         <p>I have a wide range of interests from programming, game design, web and software development, UI and UX design as well as in less development related fields such as geography and conservation.
         </p>
         <p>I am passionate about games and game development, with my first memories of playing games coming from playing games such as Myst, Colin McRae Rally, Harry potter games, and Roller-coaster Tycoon from the late 90s early 2000s with my brother and sister.</p>
@@ -83,10 +82,10 @@
             <li>
                 Unity 2D and 3D development.
             </li>
+            <li>Unity VR Development</li>
             <li>
                 Unity C# programming.
             </li>
-            <li>Unity VR Development</li>
             <li>Godot 2D C# development.
             </li>
             <li>HLSL shader programming.</li>
