--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div class="mx-auto container lead">
         <hr>
         <p id ="intro">Hi, I'm Ryan</p>
-        <p>I am a Game Developer originally from Hobart, now living in Brisbane.</p>
-        <p> I am a graduate of the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
+        <p>I am a Game Developer and Software Engineer from Hobart, Tasmania.</p>
+        <p>I am a graduate of the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
         <p>I currently work at Next World Enterprises as an Associate Programmer. At Next World I’ve had the opportunity to work with, and learn from a team of extremely talented developers to help produce high quality virtual reality training experiences.</p>
-        <p>I have a wide range of interests from programming, game design, web and software development, UI and UX design as well as in less development related fields such as geography and conservation.
+        <p>I have a wide range of interests from programming, game design, web and software development, UI and UX design as well as in less development related fields such as urbanism and conservation.
         </p>
         <p>I am passionate about games and game development, with my first memories of playing games coming from playing games such as Myst, Colin McRae Rally, Harry potter games, and Roller-coaster Tycoon from the late 90s early 2000s with my brother and sister.</p>
         <p>I love playing a wide variety of games and am always looking for new experiences in games to inspire my own development or change the way I think about games as a medium.
