--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav id ="mainNav" class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand order-first order-lg-first">Ryan Peterson</a>
+            <a href = index.html class="navbar-brand order-first order-lg-first">Ryan Peterson</a>
             <div id="navbarSupportedContent" class="collapse navbar-collapse order-last order-lg-first">
                 <hr>
                 <ul class="navbar-nav">
