--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav id ="mainNav" class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
         <!-- w-100 order-3 dual-collapse2 -->
         <div class="container-fluid">
-            <a class="navbar-brand order-first order-lg-first">Ryan Peterson</a>
+            <a href = index.html class="navbar-brand order-first order-lg-first">Ryan Peterson</a>
             <div id="navbarSupportedContent" class="collapse navbar-collapse order-last order-lg-first">
                 <hr>
                 <ul class="navbar-nav">
@@ -53,15 +53,15 @@
     <div class="mx-auto container lead">
         <hr>
         <p id ="intro">Hi, I'm Ryan</p>
-        <p>I am a Game Developer originally from Hobart, now living in Brisbane.</p>
-        <p> I am a graduate of the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
-        <p>I currently work at Next World Enterprises as an Associate Programmer. At Next World I’ve had the opportunity to work with, and learn from a team of extremely talented developers to help produce high quality virtual reality training experiences.</p>
-        <p>I have a wide range of interests from programming, game design, web and software development, UI and UX design as well as in less development related fields such as geography and conservation.
+        <p>I am a Planner and Game Developer from Hobart, Tasmania</p>
+        <p>I am currently studying my Masters of Planning at the University of Tasmania </p>
+        <p>I did my undergraduate at the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
+        <p>I currently work at Red Seal Urban & Regional Planning as a Graduate Planner. At Red Seal Urban & Regional Planning I have had the opportunity to learn from a highly experienced senior planner and gain a deep knowledge of the Tasmanian Planning System.</p>
+        <p>I previously worked at Next World Enterprises as an Associate Programmer creating VR Training experiences in the Unity Engine.</p>
+        <p>While working at Next World I had the opportunity to work with, and learn from a team of extremely talented developers to help produce high quality virtual reality training experiences.</p>
+        <p>I have a wide range of interests from urbanism, transport planning, programming, game design, game development, GIS, among others.
         </p>
-        <p>I am passionate about games and game development, with my first memories of playing games coming from playing games such as Myst, Colin McRae Rally, Harry potter games, and Roller-coaster Tycoon from the late 90s early 2000s with my brother and sister.</p>
-        <p>I love playing a wide variety of games and am always looking for new experiences in games to inspire my own development or change the way I think about games as a medium.
-        </p>
-        
+        <p>What </p>
         <h1>My Skills</h1>
         <p>Through my work, studies, and personal projects, I have gained experience using a multitude of different programming languages and tools.</p>
         <h4>Technical</h4>
