Removed old projects. Added new Intro text

--- a/index.html
+++ b/index.html
@@ -53,15 +53,20 @@
     <div class="mx-auto container lead">
         <hr>
         <p id ="intro">Hi, I'm Ryan</p>
-        <p>I am a Planner and Game Developer from Hobart, Tasmania</p>
-        <p>I am currently studying my Masters of Planning at the University of Tasmania </p>
-        <p>I did my undergraduate at the University of Tasmania where I studied a combined degree of ICT (Computer Science) majoring in Games and Creative Technologies and Science majoring in Geography and Environmental studies. </p>
+        <p>I am a Planner and Game Developer based in Hobart, Tasmania</p>
+        <p>I am currently in my final year of my Masters of Planning at the University of Tasmania </p>
+        <p>I did a combined undergraduate degree where I studied Science majoring in Geography and Environmental studies and ICT (Computer Science) majoring in Games and Creative Technologies</p>
         <p>I currently work at Red Seal Urban & Regional Planning as a Graduate Planner. At Red Seal Urban & Regional Planning I have had the opportunity to learn from a highly experienced senior planner and gain a deep knowledge of the Tasmanian Planning System.</p>
-        <p>I previously worked at Next World Enterprises as an Associate Programmer creating VR Training experiences in the Unity Engine.</p>
+        <p>I previously worked at Next World Enterprises as a Game and software developer creating VR Training experiences</p>
         <p>While working at Next World I had the opportunity to work with, and learn from a team of extremely talented developers to help produce high quality virtual reality training experiences.</p>
         <p>I have a wide range of interests from urbanism, transport planning, programming, game design, game development, GIS, among others.
         </p>
-        <p>What </p>
+        <p>What inspired me to change careers from a software and game developer to a planner was one of perspective.</p>
+        <p>As a software engineer you are always trying to look for ways to improve systems to make them more robust and efficient. As a game developer you are always trying to “find the fun” and make fun experiences, virtual spaces, that are intuitive, easy to understand and a pleasure to use.</p>
+        <p>As a planner you do all of these things but in physical places, with the goal of improving the quality of life for people.
+        </p>
+        <p>For me planning is about making great, fun, interesting places for people, and about using land and resources more efficiently while conserving the natural environment. Improving things like public and active transport networks, providing housing for people in places people want to live and more.
+        </p>
         <h1>My Skills</h1>
         <p>Through my work, studies, and personal projects, I have gained experience using a multitude of different programming languages and tools.</p>
         <h4>Technical</h4>
