--- a/Projects.html
+++ b/Projects.html
@@ -54,33 +54,8 @@
             <div class = "row mx-auto container">
                 <div class="col-lg">
                     <h3 class="text-center">
-                        Chord Recognition App
-                        <span class="badge badge-pill badge-success">Complete</span>
+                        Coming Soon...
                     </h3>
-                    <p>
-                        Working metronome with adjustable BPM, plays a random chord from the selection on the specified beat.
-                    </p>
-                    <p>
-                    My friends, knowing that I can make games, websites, software, and such, often give me dumb ideas which usually have ridiculously large scope. This wasn’t one of those, and I felt it’d be a good excuse to brush up on some of my website creation skills I’d learnt during my degree.
-                    </p>
-                    <h6>
-                        Technologies used
-                    </h6>
-                    <ul>
-                        <li>
-                            HTML5
-                        </li>
-                        <li>
-                            Javascript/Jquery
-                        </li>
-                        <li>
-                            Bootstrap
-                        </li>
-                    </ul>
-                    <p>
-                        <a class="btn btn-primary btn-lg" href="ChordRecog.html">Try it here</a>
-                    </p>
-                    <a class="" href="https://github.com/ryanp5/Chord-Recog-App">Source code</a>
                 </div>
             </div>
         </div>
