--- a/Projects.html
+++ b/Projects.html
@@ -52,10 +52,15 @@
     <div class="album lead">
         <div class="container-fluid">
             <div class = "row mx-auto container">
-                <div class="col-lg">
-                    <h3 class="text-center">
-                        Coming Soon...
-                    </h3>
+                <div class="col">
+                    <div class="card mx-auto" style="width: 50%">
+                        <img class="card-img-top" src="Projects/woolworths_newtown/images/images1.jpg">
+                       <div class="card-body">
+                            <h5 class="card-title">New Town Woolworths Housing Opportunity</h5>   
+                            <p class ="card-text">Development proposal and planning report for Housing at Woolworths New Town.</p>
+                            <a href="Projects/woolworths_newtown/woolworths_newtown.html" class=" stretched-link"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
