Added disclaimer, fixed some minor text issues

--- a/Projects/woolworths_newtown/woolworths_newtown.html
+++ b/Projects/woolworths_newtown/woolworths_newtown.html
@@ -67,7 +67,7 @@
         <p>Combine this with there being considerable amenities such as the nearby New Town Plaza and doctors within
             walking distance at the New Town Health Hub this is a fantastic location for housing with reduced car
             parking allocation.</p>
-        <h2>Planning Scheme requirements</h2>
+        <h2>Planning Scheme Requirements</h2>
         <p>Removing car parking provision for Woolworths Newtown and developing the underutilised site would have to
             comply with requirements of the relevant planning scheme the Hobart City Council Interim Planning Scheme
             2015. Although this is the current planning scheme for this area, the Tasmanian Planning Scheme and Hobart
@@ -128,16 +128,16 @@
         <p>Relevant Objectives of the zone</p>
         <p>15.1.1.1 To provide for integration of residential, retail, community services and commercial activities in
             urban locations</p>
-        <p>15.1.1.2 To encourage use and development at street level that generates activity and</p>
-        <p>pedestrian movement through the area.</p>
+        <p>15.1.1.2 To encourage use and development at street level that generates activity and pedestrian movement
+            through the area.</p>
         <p>15.1.1.5 To ensure development is accessible by public transport, walking and cycling</p>
         <p>15.1.1.6 To provide for a diversity of uses at densities responsive to the character of streetscapes,
             historic areas and buildings and which do not compromise the amenity of surrounding residential areas.</p>
-        <p>15.1.1.7 To encourage the retention of existing residential uses and the greater use of</p>
-        <p>underutilised sites as well as the reuse and adaptation of existing buildings for uses with a scale
-            appropriate to the site and area.</p>
+        <p>15.1.1.7 To encourage the retention of existing residential uses and the greater use of underutilised sites
+            as well as the reuse and adaptation of existing buildings for uses with a scale appropriate to the site and
+            area.</p>
         <h4>Development standards for buildings and works</h4>
-        <p>Building height</p>
+        <h5>Building height</h5>
         <p>Although the building height is limited at 10m for the Urban Mixed Zone in Acceptable Solution A1, there is
             opportunity for greater building height by addressing the performance criteria P1.</p>
         <p>Performance criteria P1</p>
@@ -254,12 +254,12 @@
         <h2>Conclusion</h2>
         <p>The Woolworths New Town site provides the opportunity for much needed well located medium density housing,
             close to transport, shops, services and schools and undo some of the wrongs of over allocation of land to
-            the storage of the private car in Hobart and specifically this site. Within the current planning context the
-            possibilities for residential or mixed use development for the area on the corner of Montagu and Valentine
-            Street are significant with no serious impediments that may limit development opportunity. Finally this is
-            an example of a type of development that has shown to be successful and popular for other supermarkets on
-            the mainland, with there no reason that a mixed use residential development would not succeed here in
-            Hobart.</p>
+            the storage of the private car in Hobart and specifically this site. Within the current planning context,
+            the possibilities for residential or mixed use development for the area on the corner of Montagu and
+            Valentine Street are significant, with no serious impediments that may limit development opportunity.
+            Finally this is an example of a type of development that has shown to be successful and popular for other
+            supermarkets around Australia, with there no reason that a mixed use residential development would not
+            succeed here in New Town.</p>
         <h2>References</h2>
         <p>Department of State Growth. (2025). GTFS Data. Available at: </p>
         <p>https://www.transport.tas.gov.au/public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
@@ -270,6 +270,7 @@
             [online] www.realcommercial.com.au. Available at:
             https://www.realcommercial.com.au/news/bread-milk-a-new-home-why-supermarket-giant-woolworths-is-developing-apartments
             [Accessed 4 Feb. 2025].</p>
+        <p>Opinions expressed are my own and do not represent that of my employer.</p>
     </div>
     <footer class='page-footer bg-dark d-none d-sm-block'><a id='footer-name' class='navbar-brand p-4'>Ryan Peterson</a>
         <div class='float-right p-4'><a href='mailto:ryan.peterson980@gmail.com' class='fa fa-envelope'></a><a
