Made table responsive and broke up long links work better on mobile

--- a/Projects/woolworths_newtown/woolworths_newtown.html
+++ b/Projects/woolworths_newtown/woolworths_newtown.html
@@ -86,7 +86,7 @@
         <p>Figure 3 - Zoning of Woolworths New Town site and surrounds.</p>
         <p>Number of car parking spaces required to meet the Acceptable Solution: 159</p>
         <p>Table 1 - Current and acceptable solution car parking allocation.</p>
-        <table class='table table-bordered'>
+        <table class='table table-bordered table-responsive'>
             <tr>
                 <td>Type</td>
                 <td>Current no. car parking spaces</td>
@@ -263,9 +263,12 @@
             succeed here in New Town.</p>
         <h2>References</h2>
         <p>Department of State Growth. (2025). GTFS Data. Available at: </p>
-        <p>https://www.transport.tas.gov.au/public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
+        <p>https://www.transport.tas.gov.au/
+            public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
         <p>Department of State Growth. (n.d.). Population Density, ArcGIS Web Application. [online] Available at:
-            https://maps.stategrowth.tas.gov.au/portal/apps/webappviewer/index.html?id=57dd7518745e4699bf874a64c011d296.
+        </p>
+        <p>https://maps.stategrowth.tas.gov.au/portal/apps/
+            webappviewer/index.html?id=57dd7518745e4699bf874a64c011d296.
         </p>
         <p>Dorrington, B. (2023). The supermarket wars move to housing: Why Coles and Woolworths are building units.
             [online] www.realcommercial.com.au. Available at:
