added text break class

--- a/Projects/woolworths_newtown/woolworths_newtown.html
+++ b/Projects/woolworths_newtown/woolworths_newtown.html
@@ -267,8 +267,7 @@
             public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
         <p>Department of State Growth. (n.d.). Population Density, ArcGIS Web Application. [online] Available at:
         </p>
-        <p>https://maps.stategrowth.tas.gov.au/portal/apps/
-            webappviewer/index.html?id=57dd7518745e4699bf874a64c011d296.
+        <p class="text-break">https://maps.stategrowth.tas.gov.au/portal/apps/webappviewer/index.html?id=57dd7518745e4699bf874a64c011d296.
         </p>
         <p>Dorrington, B. (2023). The supermarket wars move to housing: Why Coles and Woolworths are building units.
             [online] www.realcommercial.com.au. Available at:
