More text breaks

--- a/Projects/woolworths_newtown/woolworths_newtown.html
+++ b/Projects/woolworths_newtown/woolworths_newtown.html
@@ -263,13 +263,12 @@
             succeed here in New Town.</p>
         <h2>References</h2>
         <p>Department of State Growth. (2025). GTFS Data. Available at: </p>
-        <p>https://www.transport.tas.gov.au/
-            public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
+        <p class = "text-break">https://www.transport.tas.gov.au/public_transport/gtfs-data [Accessed 4 Feb. 2025].</p>
         <p>Department of State Growth. (n.d.). Population Density, ArcGIS Web Application. [online] Available at:
         </p>
         <p class="text-break">https://maps.stategrowth.tas.gov.au/portal/apps/webappviewer/index.html?id=57dd7518745e4699bf874a64c011d296.
         </p>
-        <p>Dorrington, B. (2023). The supermarket wars move to housing: Why Coles and Woolworths are building units.
+        <p class="text-break">Dorrington, B. (2023). The supermarket wars move to housing: Why Coles and Woolworths are building units.
             [online] www.realcommercial.com.au. Available at:
             https://www.realcommercial.com.au/news/bread-milk-a-new-home-why-supermarket-giant-woolworths-is-developing-apartments
             [Accessed 4 Feb. 2025].</p>
